<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_start"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/list"
        android:title="@string/list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/links"
        android:title="@string/links"
        android:icon="@drawable/ic_links"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"/>


</menu>